envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-client
  labels:
    app: oauth-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-client
  template:
    metadata:
      labels:
        app: oauth-client
    spec:
      containers:
      - name: oauth-client
        image: quay.io/omerlh/oauth-client:latest
      - name: "opa"
        image: openpolicyagent/opa:latest-istio
        args:
          - "run"
          - "--server"
          - "--config-file=/opa_data/config.yaml"
          - "--addr=0.0.0.0:8081"
          - "-l"
          - "debug"
        ports:
          - containerPort: 8081
        volumeMounts:
        - name: opa-config
          mountPath: /opa_data
          readOnly: true
        securityContext:
          runAsUser: 1111
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health?bundle=true
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: envoy
        image: envoyproxy/envoy:v1.12.1
        securityContext:
          runAsUser: 1111
        volumeMounts:
        - readOnly: true
          mountPath: /config
          name: envoy-config
        ports:
        - containerPort: 8000
        args:
        - "envoy"
        - "--config-path"
        - "/config/envoy.yaml"
        - "-l"
        - "trace"
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: opa-config
        configMap:
          name: opa-config

---
apiVersion: v1
kind: Service
metadata:
  name: oauth-client
spec:
  selector:
    app: oauth-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: opa-config
  namespace: default
data:
  config.yaml: |-
    services:
      - name: service-registry
        url: http://minio:9000/
    bundles:
      web-api:
        service: service-registry
        resource: bundles/service-a.tar.gz
      common:
        service: service-registry
        resource: bundles/common.tar.gz
    plugins:
        envoy_ext_authz_grpc:
            addr: :9191
            query: data.authorization.rest.allow
            dry-run: false
            enable-reflection: false
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |-
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service
                    http_filters:
                      - name: envoy.filters.http.jwt_authn
                        config: 
                          providers:
                            identity-server:
                              issuer: http://localhost:5000
                              payload_in_metadata: jwt-metadata
                              audiences:
                              - api1
                              remote_jwks:
                                http_uri:
                                  uri: http://localhost/.well-known/openid-configuration/jwks         
                                  cluster: identity-server
                                cache_duration:
                                  seconds: 86400
                          rules:
                            - match:
                                prefix: /
                              requires:
                                provider_name: identity-server
                      - name: envoy.ext_authz
                        config:
                          with_request_body:
                            max_request_bytes: 8192
                            allow_partial_message: true
                          failure_mode_allow: false
                          metadata_context_namespaces:
                            - envoy.filters.http.jwt_authn                                             
                          grpc_service:
                            google_grpc:
                              target_uri: 127.0.0.1:9191
                              stat_prefix: ext_authz
                            timeout: 0.5s
                      - name: envoy.router
                        typed_config: {}
      clusters:
        - name: service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 5008
        - name: identity-server
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY    
          connect_timeout: 2s
          lb_policy: ROUND_ROBIN
          hosts:
          - socket_address:
              address: oauth-server
              port_value: 80
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
